move data mounts to /mnt/odoo to make NFS easier

--- a/src/odoo.conf
+++ b/src/odoo.conf
@@ -1,6 +1,6 @@
 [options]
-addons_path = /mnt/odoo-addons
-data_dir = /mnt/odoo-data
+addons_path = /mnt/odoo/addons
+data_dir = /mnt/odoo/data
 list_db = False
 dbfilter = ^%d$
 proxy_mode = True
